함수 수정 완료

--- a/student.html
+++ b/student.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <script type="text/javascript">
@@ -241,7 +241,7 @@
             return ["", "", ""];
         });
         students.push(function get201644088() {
-            return ["", "", ""];
+            return ["201644088", "유주은", "90"];
         });
         students.push(function get201644094() {
             return ["", "", ""];
